--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,3 @@
-rootProject.name='moduleMvp'
-include ':app'
-include ':common'
-include ':basemvp'
-include ':basemvp:mine'
-include ':index'
-include ':other'
+include ':common',':basemvp',':index',':app'
+//include ':basemvp',':mine'
+//include ':other'
