--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,9 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+# 这个值一般跟你的AndroidStudio版本号一致
+#localGradlePluginVersion=3.6.1
+# 每次更改“isModule”的值后，需要点击 "Sync Project" 按钮
+# isModule是“集成开发模式”和“组件开发模式”的切换开关
+isModule=false
+
