--- a/basemvp/build.gradle
+++ b/basemvp/build.gradle
@@ -1,30 +1,27 @@
-apply plugin: 'com.android.library'
-
 
 android {
 
-    compileSdkVersion build_versions.build_compile
-    buildToolsVersion build_versions.build_tools
-
-
     defaultConfig {
-        minSdkVersion build_versions.min_sdk
-        targetSdkVersion build_versions.target_sdk
-        versionCode build_versions.version_code
-        versionName build_versions.version_name
-       /* javaCompileOptions {
-            annotationProcessorOptions {
-                arguments = [AROUTER_MODULE_NAME: project.getName()]
-            }
-        }*/
+        ndk {
+            // 设置支持的SO库架构
+            abiFilters 'armeabi' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+        }
     }
-
 
     dependencies {
         implementation fileTree(dir: 'libs', include: ['*.jar'])
-        implementation project(":common")
+        api project(":common")
+        api 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
+        api 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.1'
+        api 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
         //router
-//        api deps.arouter_api
-//        annotationProcessor deps.arouter_compiler
+
+
+        debugApi deps.leakcanary.debug_android
+        releaseApi deps.leakcanary.release_android
+//    api deps.leakcanary.debug_fragment
+
+        api deps.arouter.api
+        annotationProcessor deps.arouter.compiler
     }
 }
