--- a/index/src/main/module/AndroidManifest.xml
+++ b/index/src/main/module/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".index.MainActivity">
+        <activity android:name=".index.IndexMainActivity">
 
         </activity>
     </application>
