--- a/versions.gradle
+++ b/versions.gradle
@@ -4,7 +4,7 @@
  **/
 ext.deps = [:]
 //版本控制
-def versions =[:]
+def versions = [:]
 versions.retrofit = "2.3.0"
 versions.support = "27.0.2"
 versions.constraint_layout = "1.0.2"
@@ -15,14 +15,18 @@ versions.android_gradle_plugin = "3.5.1"
 versions.glide = "3.8.0"
 //rx
 versions.rx_java2 = "2.1.7"
-versions.rx_android ="2.0.1"
+versions.rx_android = "2.0.1"
+
+versions.rxbinding = "2.0.0"
+versions.rxbinding3 = "3.1.0"
 //json解析
 versions.gson = "2.8.2"
 //日志
 versions.logger = "1.15"
 //Arouter
-versions.arouter_compiler = "1.1.4"
-versions.arouter_api = "1.3.1"
+versions.arouter_core = "1.0.2"
+versions.arouter_api = "1.5.0"
+versions.arouter_compiler = "1.2.2"
 //消息处理
 versions.event_bus = "3.1.1"
 //网络加载
@@ -32,8 +36,37 @@ versions.dagger = "2.11"
 //test
 versions.test_runner = "1.1.1"
 versions.test_junit = "1.1.1"
+versions.junit = "4.12"
+//fragment
+versions.fragmentation = "1.3.8"
+versions.fragmentationx = "1.0.2"
+
+// 3.5.0 -> 4.0.0-alpha3
+versions.multitype = "4.0.0-alpha3"
+versions.multitypekt = "3.4.4"
+versions.SmartRefreshLayout = "1.1.0"
+versions.leakcanary = "1.6.3"
+
+versions.butterknife = "10.2.0"
+
+// 2.6.6.1, 3.3.1, 2.1.2
+versions.bugly = "latest.release"
+versions.bugly_native = "latest.release"
+versions.bugly_uploader = "latest.release"
+
 
 def deps = [:]
+
+def leakcanary = [:]
+leakcanary.debug_android = "com.squareup.leakcanary:leakcanary-android:$versions.leakcanary"
+leakcanary.release_android = "com.squareup.leakcanary:leakcanary-android-no-op:$versions.leakcanary"
+leakcanary.debug_fragment = "com.squareup.leakcanary:leakcanary-support-fragment:$versions.leakcanary"
+deps.leakcanary = leakcanary
+
+def rxbinding = [:]
+rxbinding.rxbinding = "com.jakewharton.rxbinding2:rxbinding:$versions.rxbinding"
+rxbinding.rxbinding3 = "com.jakewharton.rxbinding3:rxbinding:$versions.rxbinding3"
+deps.rxbinding = rxbinding
 
 def retrofit = [:]
 retrofit.runtime = "com.squareup.retrofit2:retrofit:$versions.retrofit"
@@ -63,6 +96,11 @@ support.core_utils = "com.android.support:support-core-utils:$versions.support"
 support.multidex = "com.android.support:multidex:$versions.multidex"
 deps.support = support
 
+def butterknife = [:]
+butterknife.core = "com.jakewharton:butterknife:$versions.butterknife"
+butterknife.compiler = "com.jakewharton:butterknife-compiler:$versions.butterknife"
+deps.butterknife = butterknife
+
 def test = [:]
 test.espresso = 'androidx.test.espresso:espresso-core:3.2.0'
 test.runner = "androidx.test:runner:$versions.test_runner"
@@ -84,8 +122,35 @@ deps.event_bus = "org.greenrobot:eventbus:$versions.event_bus"
 deps.gson = "com.google.code.gson:gson:$versions.gson"
 deps.logger = "com.orhanobut:logger:$versions.logger"
 
-deps.arouter_api = "com.alibaba:arouter-api:$versions.arouter_api"
-deps.arouter_compiler = "com.alibaba:arouter-compiler:$versions.arouter_compiler"
+def arouter = [:]
+arouter.core = "com.alibaba:arouter-register:$versions.arouter_core"
+arouter.api = "com.alibaba:arouter-api:$versions.arouter_api"
+arouter.compiler = "com.alibaba:arouter-compiler:$versions.arouter_compiler"
+deps.arouter = arouter
+
+deps.fragmentation = "me.yokeyword:fragmentation:$versions.fragmentation"
+deps.fragmentationx = "me.yokeyword:fragmentationx:$versions.fragmentationx"
+deps.fragmentationx_core = "me.yokeyword:fragmentationx-core:$versions.fragmentationx"
+deps.fragmentationx_swipe = "me.yokeyword:fragmentationx-swipeback:$versions.fragmentationx"
+//butterknife
+deps.butterknife_gradle_plugin = "com.jakewharton:butterknife-gradle-plugin:9.0.0-rc2"
+deps.kotterknife = "com.jakewharton:kotterknife:0.1.0-SNAPSHOT"
+
+deps.mmkv = 'com.tencent:mmkv:1.0.14'
+
+deps.bugly_crashreport = "com.tencent.bugly:crashreport:$versions.bugly"
+deps.bugly_nativecrashreport = "com.tencent.bugly:nativecrashreport:$versions.bugly_native"
+deps.bugly_symtabfileuploader = "com.tencent.bugly:symtabfileuploader:$versions.bugly_uploader"
+
+deps.multitype = "me.drakeet.multitype:multitype:$versions.multitype"
+deps.multitypekt = "me.drakeet.multitype:multitype-kotlin:$versions.multitypekt"
+
+deps.SmartRefreshLayout = "com.scwang.smartrefresh:SmartRefreshLayout:$versions.SmartRefreshLayout"
+deps.SmartRefreshHeader = "com.scwang.smartrefresh:SmartRefreshHeader:$versions.SmartRefreshLayout"
+
+deps.autosize = "me.jessyan:autosize:1.1.2"
+
+deps.BottomNavigationViewEx = "com.github.ittianyu:BottomNavigationViewEx:2.0.4"
 
 ext.deps = deps
 
@@ -93,7 +158,7 @@ def build_versions = [:]
 build_versions.min_sdk = 16
 build_versions.target_sdk = 28
 build_versions.build_tools = "28.0.3"
-build_versions.build_compile = 29
+build_versions.build_compile = 28
 build_versions.version_code = 1
 build_versions.version_name = "1.0"
 ext.build_versions = build_versions
@@ -101,7 +166,7 @@ ext.build_versions = build_versions
 
 static def addRepos(RepositoryHandler handler) {
     //Add the JitPack repository
-    handler.maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+    handler.maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
     handler.maven { url "https://jitpack.io" }
     handler.google()
     handler.jcenter()
