--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,12 @@
         android:name=".Application"
         android:networkSecurityConfig="@xml/network_security_config">
 
-
+        <meta-data
+            android:name="SERVER_URL"
+            android:value="${SERVER_URL}" />
+        <meta-data
+            android:name="APP_CHANNEL"
+            android:value="${APP_CHANNEL}" />
         <meta-data
             android:name="design_width_in_dp"
             android:value="360"/>
