--- a/index/build.gradle
+++ b/index/build.gradle
@@ -1,12 +1,9 @@
-
-
 // ButterKnife
 apply plugin: 'com.jakewharton.butterknife'
 android {
 
     compileSdkVersion build_versions.build_compile
     buildToolsVersion build_versions.build_tools
-
 
     defaultConfig {
         minSdkVersion build_versions.min_sdk
@@ -52,4 +49,14 @@ dependencies {
 
 //    api deps.arouter.api
     annotationProcessor deps.arouter.compiler
+
+    // ButterKnife
+    annotationProcessor deps.butterknife.compiler
+
+    // 单独添加核心 module Transferee, 之后至少还需要添加以下三种图片加载器中的一种
+    implementation 'com.github.Hitomis.transferee:Transferee:1.6.1'
+
+// 添加 Picasso 图片加载器
+    implementation 'com.github.Hitomis.transferee:PicassoImageLoader:1.6.1'
+
 }
